<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_image_search_black_18dp"
        android:title="@string/search" />
    <item
        android:id="@+id/scanner"
        android:icon="@drawable/baseline_filter_center_focus_black_18dp"
        android:title="@string/scanner" />
    <item
        android:id="@+id/card"
        android:icon="@drawable/icon_hand"
        android:title="@string/card" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/baseline_settings_black_18dp"
        android:title="@string/setting" />

</menu>