<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".rest_braisedActivity" >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/MyAppbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#4060ff"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/bgheader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/minzh"
                android:fitsSystemWindows="true"
                android:scaleType="centerInside"
                app:layout_collapseMode="pin" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="72dp"
                            tools:layout_editor_absoluteY="402dp"
                            android:numStars="5"
                            android:rating="3"
                            android:stepSize="1"
                            android:isIndicator="false"/>

                        <TextView
                            android:id="@+id/bpor1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/r3"
                            android:textColor="@color/text_color1"
                            android:textSize="20dp"
                            android:textStyle="normal"
                            android:typeface="normal" />

                        <TextView
                            android:id="@+id/bpor2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/r3_add"
                            android:textColor="@color/text_color1"
                            android:textSize="20sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/bpor3"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:text="@string/r3_phone"
                            android:textColor="@color/text_color1"
                            android:textSize="20sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/bpor4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/r3_time"
                            android:textColor="@color/text_color1"
                            android:textSize="20sp"
                            android:textStyle="normal" />

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="101dp"
                            android:layout_gravity="right">

                            <Button
                                android:id="@+id/map"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="right|center_vertical"
                                android:background="@drawable/maps_icon" />

                            <Button
                                android:id="@+id/talk"
                                android:layout_width="55dp"
                                android:layout_height="57dp"
                                android:layout_gravity="right|center_vertical"
                                android:layout_marginRight="90dp"
                                android:background="@drawable/talk" />
                        </android.support.v7.widget.CardView>


                    </LinearLayout>
                </ScrollView>

            </android.support.v7.widget.CardView>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>